Updated photos and name

--- a/www2.html
+++ b/www2.html
@@ -19,7 +19,7 @@
     <div class="cake-icon">🎂</div>
 
     <h1 class="title">Happy Birthday!</h1>
-    <h2 class="name">Manoj 💕</h2>
+    <h2 class="name">Harika 💕</h2>
     <p class="subtitle">🎉 It's your special day! 🎉</p>
 
     <button id="celebrateBtn" class="celebrate-btn">Let's cut the cake!!</button>
