updated new images

--- a/message.html
+++ b/message.html
@@ -41,7 +41,7 @@
 /* ------------------------------------------------------
    LETTER CONTENT
 -------------------------------------------------------*/
-const message = `My Dearest Manoj,
+const message = `My Dearest Harikaa,
 
 On this very special day, I want you to know how incredibly grateful I am to have you in my life.
 Your birthday isn’t just a celebration of another year – it’s a celebration of all the joy, laughter,
@@ -58,7 +58,7 @@ Your heart is pure gold, and your presence is absolutely infectious.
 
 Thank you for being the wonderful, amazing, frustratingly loveable, unintentionally hilarious,
 and genuinely fantastic person that you are.
-The world is brighter, happier, and definitely more entertaining because you're in it.
+The surrounding is brighter, happier, and definitely more entertaining because you're in it.
 
 Happy Birthday, beautiful soul! 🎂✨
 
