--- a/moments.html
+++ b/moments.html
@@ -23,11 +23,11 @@
     <p class="subtitle">(Swipe the cards or let them auto-play)</p>
 
     <div class="card-stack">
-      <div class="card"><img src="WhatsApp Image 2025-11-02 at 10.17.21_d4dc7bf9.jpg" alt="Moment 1" /></div>
-      <div class="card"><img src="WhatsApp Image 2025-11-02 at 10.17.22_783f2eec.jpg" alt="Moment 2" /></div>
-      <div class="card"><img src="WhatsApp Image 2025-11-02 at 10.17.27_035802c6.jpg" alt="Moment 3" /></div>
-      <div class="card"><img src="WhatsApp Image 2025-11-02 at 10.17.21_d4dc7bf9.jpg" alt="Moment 4" /></div>
-      <div class="card"><img src="WhatsApp Image 2025-11-02 at 10.17.22_783f2eec.jpg" alt="Moment 5" /></div>
+      <div class="card"><img src="IMG-20251207-WA0012.jpg" alt="Moment 1" /></div>
+      <div class="card"><img src="IMG-20251207-WA0013.jpg" alt="Moment 2" /></div>
+      <div class="card"><img src="IMG-20251207-WA0014.jpg" alt="Moment 3" /></div>
+      <div class="card"><img src="IMG-20251207-WA0015.jpg" alt="Moment 4" /></div>
+      <div class="card"><img src="IMG-20251207-WA0016.jpg" alt="Moment 5" /></div>
     </div>
 
     <button class="message-btn hidden">💌 Play game</button>
