added new images

--- a/lastp.html
+++ b/lastp.html
@@ -16,7 +16,7 @@
 
   <div class="container">
     <img src="tq.gif" alt="Loading..." class="loading-gif" />
-    <h1 class="title">Thank you for your most valuable time, Manoj</h1>
+    <h1 class="title">Thank you for your most valuable time, Harii</h1>
     <p class="subtitle">...I hope you liked this small surprise from me...</p>
   </div>
 
