--- a/message.html
+++ b/message.html
@@ -47,14 +47,15 @@ On this very special day, I want you to know how incredibly grateful I am to hav
 Your birthday isn’t just a celebration of another year – it’s a celebration of all the joy, laughter,
 drama, and beautiful memories you bring into this world.
 
-Yes, you get angry for no reason, act all serious, and throw attitude like it’s your hidden talent…
-but behind all that, you have one of the purest, softest, most golden hearts ever.
-That’s the part of you that truly shines — even when you pretend it doesn’t.
+Yes,I know that you get angry for no reason, act all serious, and throw attitude like it’s your hidden talent…
+but behind all that,  I know that you have one of the purest, softest, most golden hearts ever.
+That’s the part of you that truly shines — even when you pretend it doesn’t and I can feel
+how kind heart is your's as purest from as I know.
 
-You have this amazing ability to light up any room you enter — sometimes with your smile,
-sometimes with your jokes, and sometimes just by being your chaotic, dramatic, adorable self.
-Even in your angry mode, you somehow still make people laugh, feel seen, and feel cared for.
-Your heart is pure gold, and your presence is absolutely infectious.
+I truly wish that every dream you quietly hold in your heart finds its way into the world. 
+You have a strength you don’t always see in yourself, but it’s there — steady, bright, and capable of taking you anywhere you want to go.
+May life open the right doors, guide you through the tough days, and reward your efforts in ways even better than you expect. 
+You deserve to reach every goal you set, and I hope this year brings you closer to everything you’re meant to become.
 
 Thank you for being the wonderful, amazing, frustratingly loveable, unintentionally hilarious,
 and genuinely fantastic person that you are.
@@ -62,8 +63,10 @@ The surrounding is brighter, happier, and definitely more entertaining because y
 
 Happy Birthday, beautiful soul! 🎂✨
 
-Sending you joy, laughter, and a little reminder to stop being angry for no reason,
-With Endless Gratitude 💕
+Sending you the blessing of infinity joy, love, laughter you in the coming years and a little reminder to stop being angry for no reason,
+With Endless Gratitude and love
+
+Once again Happies birthday puriiiii💕
 `;
 
 const typedText = document.getElementById("typed-text");
